# xltidy

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/commands/: moa.md  xltidy.md
.opencode/skills/moa/: SKILL.md
.opencode/skills/xltidy/: SKILL.md
docs/: brand-prompts.md
docs/superpowers/plans/: 2026-06-10-xltidy.md
docs/superpowers/specs/: 2026-06-10-xltidy-excel-to-db-design.md
src/moa/: _xl.py  apply.py  cli.py  config.py  consolidate.py  coords.py  dbio.py  encode.py  extract.py  infer.py  models.py  pivot.py  reconcile.py  session.py  spec.py  verify.py
src/xltidy/: _xl.py  apply.py  cli.py  config.py  consolidate.py  dbio.py  encode.py  extract.py  infer.py  models.py  pivot.py  verify.py
tests/: fixtures.py  test_apply.py  test_cli.py  test_config.py  test_consolidate.py  test_coords.py  test_dbio.py  test_e2e_excel.py  test_encode.py  test_extract_excel.py  test_fixtures.py  test_infer.py  test_models.py  test_no_openpyxl.py  test_pivot_excel.py  test_reconcile.py  test_session.py  test_smoke.py  test_spec.py  test_verify.py  test_xl_cleanup.py
