[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xltidy"
version = "0.1.7"
description = "Moa (모아) — xlwings-only Excel -> tidy per-workbook folder of tables, with reusable TemplateSpec"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Judy-0509" }]
keywords = ["excel", "xlwings", "etl", "tidy-data", "pivot-table", "qwen", "opencode", "survey-data"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = ["xlwings>=0.31", "pandas>=2.0", "pydantic>=2.5", "pyyaml>=6.0", "typer>=0.12", "click>=8.1,<8.2", "rich>=13.0"]

[project.urls]
Homepage = "https://github.com/Judy-0509/moa"
Repository = "https://github.com/Judy-0509/moa"
Issues = "https://github.com/Judy-0509/moa/issues"

[project.optional-dependencies]
parquet = ["pyarrow>=15.0"]
qwen = ["openai>=1.40"]
dev = ["pytest>=8.0"]

[project.scripts]
moa = "xltidy.cli:app"
xltidy = "xltidy.cli:app"  # legacy alias (non-breaking); both commands run the same CLI

[tool.hatch.build.targets.wheel]
packages = ["src/xltidy"]

[tool.pytest.ini_options]
markers = ["excel: requires a live Excel install via xlwings (Windows desktop)"]
testpaths = ["tests"]
addopts = "-ra"
